z-indexes fix

--- a/src/style.scss
+++ b/src/style.scss
@@ -98,6 +98,7 @@ body {
   }
 
   .content {
+    z-index: 0;
     display: flex;
     flex-flow: column;
     background-color: var(--bg);
